# ngrams-across-time

./: .gitignore  README.md  checkpoint_search.py  language_divergence.py  ngram_data.py  pyproject.toml  select_language_prompts.py
ngrams_across_time/: detect_grokking.py  grokking_sae.py
ngrams_across_time/clearnets/: autointerp_cache.py  autointerp_explain.py  chunk_pile.py  metrics.py  populate_cache_sae.py
ngrams_across_time/experiments/: circuit_discovery.py  collect_metrics.py  filter_data.py  load_models.py  run_analysis.py  run_circuit_discovery.py  run_collect_and_filter.py
ngrams_across_time/feature_circuits/: activation_utils.py  attribution.py  circuit.py  dense_act.py  loading_utils.py  patch_nodes.py  sae_loss.py
ngrams_across_time/finetune_sae/: sae_finetune_comparison.py
ngrams_across_time/grok/: chunk_pile.py  concentration.py  detect.py  detect_vit.py  grokking_sae.py  hf_model.py  metrics.py  plot_detect.py  tmp.py  train.py  train_llama.py  train_saes.py  train_transported.py  train_vit.py  transformers.py
ngrams_across_time/image/: calculate_divergences.py  collect_image_metrics.py  data_types.py  filter_images.py  image_data_types.py  load_image_model_data.py  load_model_data.py  patch_image.py
ngrams_across_time/language/: collect_language_metrics.py  collect_metrics.py  collect_ngram_dists.py  collect_unsmoothed_ngram_dists.py  count_ngrams.py  daat.py  filter_data.py  filter_ngrams.py  (+5 more)
notebooks/: patch_image.ipynb  patch_language.py  patch_lms.ipynb
src/: detect_grokking.py  model_loaders.py
test_image/: tensor_db.sqlite
(+62 files in other folders)
