[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ngrams-across-time"
description = ""
readme = "README.md"
requires-python = ">=3.10"
keywords = ["interpretability", "explainable-ai"]
license = {text = "MIT License"}
dependencies = [
    "concept-erasure",
    "datasets",
    "torch",
    "plotly",
    "scipy",
    "transformers",
    "optimum",
    "pre-commit",
    "pygraphviz",
]
version = "0.0.1"

[tool.setuptools]
packages = ["ngrams_across_time"]

[tool.pyright]
include = ["ngrams_across_time*"]
reportPrivateImportUsage = false

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88
ignore-init-module-imports = true